; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_vfs_unmountbyfsid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_vfs_unmountbyfsid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vfs_unmountbyfsid(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call i64 @mount_list_lookupby_fsid(i32* %9, i32 0, i32 1)
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @ENOENT, align 4
  store i32 %14, i32* %4, align 4
  br label %24

15:                                               ; preds = %3
  %16 = load i64, i64* %8, align 8
  %17 = call i32 @mount_ref(i64 %16, i32 0)
  %18 = load i64, i64* %8, align 8
  %19 = call i32 @mount_iterdrop(i64 %18)
  %20 = load i64, i64* %8, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @safedounmount(i64 %20, i32 %21, i32 %22)
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %15, %13
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i64 @mount_list_lookupby_fsid(i32*, i32, i32) #1

declare dso_local i32 @mount_ref(i64, i32) #1

declare dso_local i32 @mount_iterdrop(i64) #1

declare dso_local i32 @safedounmount(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
